--- a/index.html
+++ b/index.html
@@ -11,27 +11,31 @@
 </head>
 <body>
     <main id="app">
-        <h1 @click="clickHeader">{{ message }}</h1>
-        <p>{{anotherMessage}}</p>
-
+        <section class="lightbox-con" :class="{'lightbox-con-disabled':showLightbox}">
+            <lightbox v-on:show-mini="showMiniData" :lightbox-mini-data="currentMiniData"></lightbox>
+        </section>
+        <section id="topBar"><h1 class="hidden" @click="clickHeader">{{ message }}</h1></section>
+        <div class="center"><h2 class="hidden">{{anotherMessage}}</h2></div>
+        <div class="errorContainer" :class="{'errorContainer-hidden':errorMessageNotDisplayed}">{{ errorMessage }}</div>
         <!-- show the prof data in profs array -->
-        <ul>
+        <ul class="center">
             <!-- this is a custom Vue component defined in main.js -->
-            <prof-card v-for="prof in professors" :prof="prof" :key="prof.id"></prof-card>
-
-            <!-- <li v-for="prof, index in professors">
-                <p>Prof Name: {{ prof.name }}, Role: {{ prof.role }}</p>
-
-                <a href="" class="remove-prof" @click.prevent="showProfData(prof)" :class="{'prof-button-modifier' : removeAformat}">Show {{ prof.name}}'s info</a> 
+            <div class="mini-container">
+                <mini-data v-for="mini in cars" :mini="mini" :key="mini.id" class="mini-data" v-on:show-mini="showMiniData"></mini-data>
+            </div>
+            <!-- <li v-for="mini, index in cars">
+                <p>Prof Name: mini.name }}, Role: {{ mini.role }}</p>
+            
+                <a href="" class="remove-mini" @click.prevent="showMiniData(mini)" :class="{'mini-button-modifier' : removeAformat}">Show {{ mini.name}}'s info</a> 
                 
-                <a href="" class="remove-prof" @click.prevent="removeProf(index)" :class="{'prof-button-modifier' : removeAformat}">Remove {{ prof.name}}</a>
+                <a href="" class="remove-mini" @click.prevent="removemini(index)" :class="{'mini-button-modifier' : removeAformat}">Remove {{ mini.name}}</a>
             </li> -->
         </ul>
 
         <!-- show more section -->
         <section class="bio-data" :class="{'show-bio' : showBioData}">
-            <h1>{{ currentProfData.name }}</h1>
-            <p> {{ currentProfData.nickname }}</p>
+            <h1>{{ currentMiniData.Model }}</h1>
+            <h2> {{ currentMiniData.Type }}</h2>
         </section>
     </main>
 </body>
